[package]
name    = "ctu"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "ctu"
path = "src/bin/ctu.rs"

[[bin]]
name = "ctu-graph"
path = "src/bin/ctu_graph.rs"

[dependencies]
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
clap          = { version = "4", features = ["derive"] }
is-terminal   = "0.4"
terminal_size = "0.3"
